[LEAK] [GStreamer] Removing video element will not free assigned memory https://bugs.webkit.org/show_bug.cgi?id=46560

Reviewed by Eric Carlson.

Moved the ::extraMemoryCost() implementation to the
MediaPlayerPivateInterface base class. This default implementation
is now shared between the various MediaPlayerPrivate backends,
excepted the AVF MediaSource player which still reports no extra
memory cost.

* platform/graphics/MediaPlayerPrivate.h:
(WebCore::MediaPlayerPrivateInterface::totalBytes): Make
totalBytes() part of the MediaPlayerPrivate interface.
(WebCore::MediaPlayerPrivateInterface::extraMemoryCost): Default
implementation.
* platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.cpp:
(WebCore::MediaPlayerPrivateAVFoundation::extraMemoryCost): Deleted.
* platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.h:
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.h:

git-svn-id: http://svn.webkit.org/repository/webkit/trunk@175526 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Conflicts:
	Source/WebCore/ChangeLog
	Source/WebCore/platform/graphics/MediaPlayerPrivate.h
	Source/WebCore/platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.cpp
	Source/WebCore/platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.h
	Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp
	Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h